crates/tui/src/snapshots/chatgpt_tui__tests__apply_dialog.snap
---
source: crates/tui/src/tests.rs
expression: screen
---
"chatgpt · 3 of 4 · active · all · all topics                                                        marked: 1 delete, 1 archive (x to apply)"
"┌Conversations───────────────────────────────────────────────────────┐┌Postgres backup plan────────────────────────────────────────────────┐"
"│D 2024-05-01 delete   coding_general Empty test chat                ││updated 2024-05-01 · created 2024-05-01 · in a project              │"
"│A 202┌Apply marks─────────────────────────────────────────────────────────┐KEEP · coding_general · keep because                           │"
"│  202│                                                                    │                                                               │"
"│     │ Archive 1 and permanently delete 1 conversation(s). Deletes cannot │ng transcript…                                                 │"
"│     │ be undone.                                                         │                                                               │"
"│     │ Type apply and press enter. Esc cancels.                           │                                                               │"
"│     │                                                                    │                                                               │"
"│     │                                                                    │                                                               │"
"│     └────────────────────────────────────────────────────────────────────┘                                                               │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"Nothing marked. d marks for delete, a for archive.                                                                                          "
