crates/tui/src/snapshots/chatgpt_tui__tests__filters_no_match.snap
---
source: crates/tui/src/tests.rs
expression: "{ h.key(KeyCode::Char('A')); h.key(KeyCode::Char('2')); h.screen() }"
---
"chatgpt · 0 of 4 · archived · delete · all topics                                                                                           "
"┌Conversations───────────────────────────────────────────────────────┐┌────────────────────────────────────────────────────────────────────┐"
"│No conversations match.                                             ││Nothing selected.                                                   │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"? help · / filter · 1-6 suggestion · t topic · y age · b brainstorms · n title · d/a mark · enter accept · x apply · q quit                 "
