crates/tui/src/snapshots/chatgpt_tui__tests__help_narrow.snap
---
source: crates/tui/src/tests.rs
expression: screen
---
"chatgpt · 3 of 4 · active · all · all topics                "
"┌Conversations─────────────────────────────────────────────┐"
"│  2┌Keys──────────────────────────────────────────────────┐"
"│  2│                                                      │"
"│  2│ j/k ↑/↓  move            g/G  top/bottom             │"
"│   │ ctrl-d/u  page                                       │"
"│   │ J/K      scroll preview  /    filter titles    esc   │"
"│   │ clear filter                                         │"
"│   │ 1-6      all · delete · archive · keep · unjudged ·  │"
"│   │ unsure                                               │"
"│   │ t/T      next/previous topic                    A    │"
"│   │ archived view                                        │"
"│   │ y/Y      older than: any · 30d · 6m · 1y · 2y · 3y   │"
"│   │ b/B      brainstorms: off · any · writing · sermon · │"
"│   │ product · other                                      │"
"│   │ d / a    mark delete / archive (again to unmark)   u │"
"│   │ unmark                                               │"
"│   │ enter    take suggestion and move on             x   │"
"│   │ apply marks                                          │"
"│   │ c        copy transcript    o  open in browser  r    │"
"│   │ reload data                                          │"
"│   │ n        edit local title (ChatGPT title stays       │"
"│   │ unchanged)                                           │"
"│   │ q        quit               ?  close help            │"
"│   │                                                      │"
"│   └──────────────────────────────────────────────────────┘"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"? help · / filter · 1-6 suggestion · t topic · y age · b bra"
