crates/tui/src/snapshots/chatgpt_tui__tests__list_and_preview.snap
---
source: crates/tui/src/tests.rs
expression: screen
---
"chatgpt · 3 of 4 · active · all · all topics                                                                                                "
"┌Conversations───────────────────────────────────────────────────────┐┌Empty test chat─────────────────────────────────────────────────────┐"
"│  2024-05-01 delete   coding_general Empty test chat                ││updated 2024-05-01 · created 2024-05-01                             │"
"│  2024-05-01 keep     coding_general Postgres backup plan           ││Jev: DELETE · coding_general · delete because                       │"
"│  2024-05-01 ·                       Unjudged third chat            ││                                                                    │"
"│                                                                    ││# chat a1                                                           │"
"│                                                                    ││                                                                    │"
"│                                                                    ││hello from a1                                                       │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"? help · / filter · 1-6 suggestion · t topic · y age · b brainstorms · n title · d/a mark · enter accept · x apply · q quit                 "
