crates/tui/src/snapshots/chatgpt_tui__tests__preview_with_summary.snap
---
source: crates/tui/src/tests.rs
expression: screen
---
"chatgpt · 3 of 4 · active · all · all topics                                                                                                "
"┌Conversations───────────────────────────────────────────────────────┐┌Postgres backup plan────────────────────────────────────────────────┐"
"│  2024-05-01 delete   coding_general Empty test chat                ││updated 2024-05-01 · created 2024-05-01 · in a project              │"
"│  2024-05-01 keep     coding_general Postgres backup plan           ││Jev: KEEP · coding_general · keep because                           │"
"│  2024-05-01 ·                       Unjudged third chat            ││                                                                    │"
"│                                                                    ││Summary                                                             │"
"│                                                                    ││Planning nightly pg_dump backups.                                   │"
"│                                                                    ││                                                                    │"
"│                                                                    ││────────────────────────────────────────                            │"
"│                                                                    ││                                                                    │"
"│                                                                    ││# Postgres backup plan                                              │"
"│                                                                    ││                                                                    │"
"│                                                                    ││## Me                                                               │"
"│                                                                    ││                                                                    │"
"│                                                                    ││how do I back up postgres                                           │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"? help · / filter · 1-6 suggestion · t topic · y age · b brainstorms · n title · d/a mark · enter accept · x apply · q quit                 "
