crates/tui/src/snapshots/chatgpt_tui__tests__title_edit.snap
---
source: crates/tui/src/tests.rs
expression: h.screen()
---
"chatgpt · 3 of 4 · active · all · all topics                                                                                                "
"┌Conversations───────────────────────────────────────────────────────┐┌Empty test chat─────────────────────────────────────────────────────┐"
"│  2024-05-01 delete   coding_general Empty test chat                ││updated 2024-05-01 · created 2024-05-01                             │"
"│  202┌Edit local title────────────────────────────────────────────────────┐DELETE · coding_general · delete because                       │"
"│  202│                                                                    │                                                               │"
"│     │ Shown only in this CLI and TUI. Enter saves; Esc cancels.          │ng transcript…                                                 │"
"│     │ Better chat title                                                  │                                                               │"
"│     │                                                                    │                                                               │"
"│     └────────────────────────────────────────────────────────────────────┘                                                               │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"│                                                                    ││                                                                    │"
"└────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────┘"
"? help · / filter · 1-6 suggestion · t topic · y age · b brainstorms · n title · d/a mark · enter accept · x apply · q quit                 "
